# manage

./: Dockerfile  config.py  config_debug.py  pyproject.toml
manage/: app.py  fallback.py  mc.py
manage/backup/: __init__.py
manage/mc/: __init__.py  rcon.py
manage/query/: __init__.py
