[tool.poetry]
name = "manage"
version = "0.1.0"
description = ""
authors = ["Jamie Bliss <jamie@ivyleav.es>"]

[tool.poetry.dependencies]
python = "^3.8"
varlink = "^30.3.0"
hypercorn = {extras = ["uvloop"], version = "^0.9.0"}

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
