[tool.poetry]
name = "manage"
version = "0.1.0"
description = ""
authors = ["Jamie Bliss <jamie@ivyleav.es>"]

[tool.poetry.dependencies]
python = "^3.8"
varlink = "^30.3.0"
hypercorn = {extras = ["uvloop"], version = "^0.9.0"}
starlette = "^0.13.0"
aiomc = {git = "https://github.com/minecraft-podman/aiomc.git"}
aiofiles = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[tool.poetry.plugins."podcraft_manage.http"]
"/" = "manage.query:app"

[tool.poetry.plugins."podcraft_manage.lifespan"]
"query" = "manage.query:app"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

